--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 async-timeout==4.0.3
 bleak==0.21.1
+certifi==2023.7.22
+charset-normalizer==3.3.1
 click==8.1.7
 dbus-fast==2.12.0
+fake-useragent==1.3.0
+idna==3.4
+mysql-connector-python==8.2.0
 numpy==1.26.1
+protobuf==4.21.12
 PyQt5==5.15.9
 pyqt5-plugins==5.15.9.2.3
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.13.0
 pyqt5-tools==5.15.9.3.3
+pyqtgraph==0.13.3
 pyserial==3.5
 python-dotenv==1.0.0
 qt5-applications==5.15.2.2.3
 qt5-tools==5.15.2.1.3
+requests==2.31.0
+six==1.16.0
 typing_extensions==4.8.0
+urllib3==2.0.7
